# DoorCTRL

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
conf/: Cargo.toml
conf/src/: lib.rs
doorctrl/: Cargo.toml
doorctrl/src/: config.rs  door.rs  lib.rs  state.rs
doorctrl/src/conf/: mod.rs
doorctrl/src/door/: mod.rs
doorctrl/src/hass/: discover.rs  mod.rs  topic.rs
doorctrl/src/http/: header.rs  mod.rs  request.rs  response.rs  server.rs  websocket.rs
doorctrl/src/state/: mod.rs
doorctrl/src/web/: mod.rs
doorctrl/src/web/html/: index.html
doorctrl/src/ws2812/: mod.rs
firmware/: Cargo.toml
firmware/src/: lib.rs
firmware/src/web/: mod.rs
firmware/src/web/html/: 400.html  404.html  index.html
firmware/src/ws2812/: mod.rs
http/: Cargo.toml
http/src/: ascii.rs  header.rs  lib.rs  request.rs  response.rs  websocket.rs
pcb/pcb/: pcb.kicad_pro  pcb.kicad_sch
