[package]
edition      = "2021"
name         = "doorctrl"
rust-version = "1.90"
version      = "0.1.0"

[[bin]]
name = "doorctrl"
path = "./src/bin/main.rs"
test = false
doctest = false
bench = false

[lib]
test = false
doctest = false
bench = false

[dependencies]
http = {path = "../http/" }
defmt = {version = "1.0.1", features=["alloc"]}

embedded-nal-async = "0.8.0"
embedded-io-async = "0.6.1"
embedded-hal = { version = "1.0.0", features=["defmt-03"] }
embedded-hal-async = "1.0.0"
embedded-storage = "0.3.1"

# esp-hal-embassy = { git = "https://github.com/ChrisPortman/esp-hal.git", branch = "esp-hal-v1.0.0-rc.0.1", features = ["defmt", "esp32c3"] }
# esp-alloc = { git = "https://github.com/ChrisPortman/esp-hal.git", branch = "esp-hal-v1.0.0-rc.0.1" }
# esp-bootloader-esp-idf = { git = "https://github.com/ChrisPortman/esp-hal.git", branch = "esp-hal-v1.0.0-rc.0.1", features = ["esp32c3"] }
# esp-hal = { git = "https://github.com/ChrisPortman/esp-hal.git", branch = "esp-hal-v1.0.0-rc.0.1", features = [
#   "defmt",
#   "esp32c3",
#   "unstable",
# ]}
# esp-wifi = { git = "https://github.com/ChrisPortman/esp-hal.git", branch = "esp-hal-v1.0.0-rc.0.1", features = [
#   "defmt",
#   "wifi",
#   "esp32c3",
# ]}

esp-alloc = { version = "0.9.0" }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3", "defmt"] }
esp-hal = { version = "1.0.0-rc.1", features = [
  "defmt",
  "esp32c3",
  "unstable",
]}
esp-rtos = { version = "0.1.0", features = ["defmt", "esp32c3", "embassy", "esp-radio"] }
esp-radio = { version = "0.16.0", features = [
  "defmt",
  "wifi",
  "esp32c3",
]}
esp-storage = { version = "0.8.0", features = ["defmt", "esp32c3"]}

critical-section = "1.2.0"
embassy-executor = { version = "0.9.0", features = [
  "defmt",
  # "task-arena-size-65536",
] }
embassy-futures = { version = "0.1.2" }
embassy-net = { version = "0.7.0", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = "2.1.1"
serde = { version = "1.0", default-features=false, features=["derive"] }
serde-json-core = "0.6.0"
rust-mqtt = {version = "0.3.0", default-features=false, features=["no_std", "defmt"]}
rand_core = "0.9.3"
heapless = "0.8.0"

