[package]
name = "doorctrl"
version = "0.1.0"
edition = "2024"

[lib]
test = true
doctest = false
bench = false

[dependencies]
defmt = {version = "1.0.1"}
sha1 = {version = "0.10.6", default-features=false}
base64ct = "1.8.0"

embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.7.2", features = ["defmt"] }

embedded-hal = { version = "1.0.0", features=["defmt-03"] }
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
embassy-time = { version = "0.4.0", features = ["defmt"] }

heapless = {version = "0.9"}

rust-mqtt = { git = "https://github.com/ChrisPortman/rust-mqtt.git", branch = "main", default-features=false, features=["no_std", "defmt"] }

serde = { version = "1.0", default-features=false, features=["derive"] }
serde-json-core = "0.6.0"

[dev-dependencies]
hex = "0.4.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

