[package]
edition      = "2021"
name         = "firmware"
rust-version = "1.90"
version      = "0.1.0"

[[bin]]
name = "doorctrl"
path = "./src/bin/main.rs"
test = false
doctest = false
bench = false

[lib]
test = false
doctest = false
bench = false

[dependencies]
doorctrl = { path = "../doorctrl/" }
weblite = { version = "0.0.1", features=["defmt"]}
defmt = {version = "1.0.1", features=["alloc"]}

embedded-nal-async = "0.8.0"
embedded-io-async = "0.6.1"
embedded-hal = { version = "1.0.0", features=["defmt-03"] }
embedded-hal-async = "1.0.0"
embedded-storage = "0.3.1"
embedded-tls = {version = "0.17.0", default-features = false, features=["defmt"] }

embassy-executor = { version = "0.9.0", features = [ "defmt" ] }
embassy-futures = { version = "0.1.2" }
embassy-net = { version = "0.7.0", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }

esp-alloc = { version = "0.9.0" }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3", "defmt"] }
esp-hal = { version = "1.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
]}
esp-rtos = { version = "0.2", features = ["defmt", "esp32c3", "embassy", "esp-radio"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "wifi",
  "esp32c3",
]}
esp-storage = { version = "0.8.0", features = ["defmt", "esp32c3"]}

critical-section = "1.2.0"
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = "2.1.1"
serde = { version = "1.0", default-features=false, features=["derive"] }
serde-json-core = {version = "0.6", features = ["defmt"] }
rust-mqtt = { git = "https://github.com/ChrisPortman/rust-mqtt.git", branch = "main", default-features=false, features=["no_std", "defmt"] }
rand_core = "0.9.3"
heapless = "0.8.0"

